# skarbonka-backend

./: .env  .env.example  .flake8  .gitignore  .isort.cfg  Dockerfile  README.md  docker-compose-prod.yaml  docker-compose.yaml  entrypoint.sh  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
accounts/: admin.py  apps.py  enum.py  managers.py  models.py  permissions.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_auto_20220313_2316.py  0003_remove_customuser_balance.py  0004_auto_20220426_0852.py  0005_remove_family_name.py
accounts/tests/: factories.py  test_model.py  test_views.py
nginx/: Dockerfile  nginx.conf
project/: __init__.py  asgi.py  celery.py  example_settings_local.py  settings.py  settings_account.py  settings_local.py  urls.py  wsgi.py
skarbonka/: admin.py  apps.py  enum.py  models.py  permissions.py  serializers.py  signals.py  state_conditions.py  swagger_schemas.py  tasks.py  urls.py  utils.py  views.py
skarbonka/migrations/: 0001_initial.py  0002_auto_20220325_1540.py  0003_auto_20220405_1100.py  0004_auto_20220405_1127.py  0005_auto_20220412_0752.py  0006_auto_20220426_0852.py  0007_transaction_state.py  0008_auto_20220515_1605.py  0009_alter_transaction_state.py  0010_remove_transaction_status.py  0011_auto_20220517_1418.py  0012_alter_loan_notify.py  0013_auto_20220531_1108.py
skarbonka/tests/: test_views.py
